# libfasta

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  libfasta-1.0.pc.in  libtool
src/: Makefile.am  Makefile.in  assume.h  crc32.c  crc32.h  debug.c  debug.h  fasta.c  fasta.h  genmask.c  helpers.c  helpers.h  seqid.c  seqid.h  sm_alloc.c  sm_alloc.h  symbols.ver  trans.c  trans.h
tests/: Makefile.am  Makefile.in  T0.sh  T1.sh  T2.sh  T3.sh  T4.sh  T5.sh  T6.sh  T7.sh
tests/data/: bug0.fa  bug1.fa  bug3.fa  cdseg-correct  cdseg.fa  multi.fa  multi2.fa  simple.fa
tests/src/: cdseg.c  fastacat.c  fastagen.c  fastaget.c  idx_count.c  idx_read.c  noidx_count.c  noidx_read.c  noidx_trans.c
