lib_LTLIBRARIES= libfasta-1.0.la

libfasta_1_0_la_SOURCES=	debug.c		\
				debug.h		\
				fasta.c		\
				seqid.c		\
				sm_alloc.c	\
				sm_alloc.h	\
				trans.c		\
				crc32.c		\
				crc32.h

libfasta_1_0_la_LDFLAGS=

library_includedir=$(includedir)/libfasta-1.0/libfasta

library_include_HEADERS=	fasta.h	\
				seqid.h \
				trans.h \
				assume.h
