lib_LTLIBRARIES= libfasta-1.0.la

libfasta_1_0_la_SOURCES=	fasta.c		\
				seqid.c		\
				trans.c		\
				crc32.c		\
				crc32.h		\
				helpers.c	\
				helpers.h

libfasta_1_0_la_CFLAGS= -D_BSD_SOURCE
libfasta_1_0_la_LDFLAGS=

library_includedir=$(includedir)/libfasta-1.0/libfasta

library_include_HEADERS=	fasta.h	\
				seqid.h \
				trans.h
